--- a/YelpClnt/Yelp/Base.lproj/Main.storyboard
+++ b/YelpClnt/Yelp/Base.lproj/Main.storyboard
@@ -159,8 +159,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6kL-ma-Um2">
-                                <rect key="frame" x="20" y="64" width="560" height="536"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6kL-ma-Um2">
+                                <rect key="frame" x="20" y="64" width="560" height="492"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="com.hqt.yelp.pref.switch" rowHeight="60" id="7aK-GI-CHH" customClass="PreferenceSwitchCell" customModule="Yelp" customModuleProvider="target">
@@ -192,22 +192,22 @@
                                             <outlet property="switchPicker" destination="5bO-ju-bmf" id="RjO-G7-9UR"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="com.hqt.yelp.pref.spinner" rowHeight="60" id="UL3-8D-dRK" customClass="PreferenceSpinnerCell" customModule="Yelp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="88" width="560" height="60"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="com.hqt.yelp.pref.spinner" rowHeight="77" id="UL3-8D-dRK" customClass="PreferenceSpinnerCell" customModule="Yelp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="88" width="560" height="77"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UL3-8D-dRK" id="TUF-fK-H2v">
-                                            <rect key="frame" x="0.0" y="0.0" width="560" height="59.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="560" height="76.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sS4-RU-D2o">
-                                                    <rect key="frame" x="8" y="8" width="544" height="43.5"/>
+                                                    <rect key="frame" x="32" y="18" width="496" height="40.5"/>
                                                 </pickerView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottomMargin" secondItem="sS4-RU-D2o" secondAttribute="bottom" id="OrC-EU-9mi"/>
-                                                <constraint firstItem="sS4-RU-D2o" firstAttribute="top" secondItem="TUF-fK-H2v" secondAttribute="topMargin" id="R6Q-GZ-87a"/>
-                                                <constraint firstItem="sS4-RU-D2o" firstAttribute="leading" secondItem="TUF-fK-H2v" secondAttribute="leadingMargin" id="cyU-VU-Ehe"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="sS4-RU-D2o" secondAttribute="trailing" id="jYB-Qu-cHJ"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="sS4-RU-D2o" secondAttribute="bottom" constant="10" id="CWX-2l-0Lf"/>
+                                                <constraint firstItem="sS4-RU-D2o" firstAttribute="top" secondItem="TUF-fK-H2v" secondAttribute="topMargin" constant="10" id="IRN-4f-F6N"/>
+                                                <constraint firstItem="sS4-RU-D2o" firstAttribute="leading" secondItem="TUF-fK-H2v" secondAttribute="leadingMargin" constant="24" id="Q7g-nh-13M"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="sS4-RU-D2o" secondAttribute="trailing" constant="24" id="pC5-pn-AQs"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
